[metadata]
name = piadcio
version = attr: piadcio.version.__version__
author = DouniaBoudefla
url = https://github.com/DouniaBoudefla/piadcio
description = A versatile and I/O expansion project designed to enhance the GPIO capabilities of the Raspberry Pi
long_description = file: README.md
long_description_content_type = text/markdown
keywords = Physics, Data
license = GPLv3
license_files = LICENSE
classifiers =
    Environment :: Console
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Python :: 3 :: Only
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Topic :: Scientific/Engineering :: Physics
    Intended Audience :: Science/Research

[options]
python_requires = >=3.7, <4
packages = find:

